docs/git-github: att extras

--- a/Estudos-CC-Estacio/11. Materiais-Extras/1. Git-Github.md
+++ b/Estudos-CC-Estacio/11. Materiais-Extras/1. Git-Github.md
@@ -16,6 +16,7 @@
 
 [Introdução ao Git e GitHub - GIT FLOW](https://www.youtube.com/watch?v=l44uGe-sxgM)
 
+[Introdução ao Git e GitHub - GITKEEP e GITIGNORE](https://www.youtube.com/watch?v=spoUnf34R4A&t=1014s)
 
 [Site: Téo Me Why](https://teomewhy.org)
 
